[package]
name = "musig-psbt"
version = "0.2.0"
edition = "2018"

[dependencies]
bitcoin = { version = "0.30" }
clap = { version = "4.2.7", features = [ "derive" ], optional = true }
rand = { version = "0.8" }
secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "0de61c2cc536a58f08822851528a5dfa5968d155" }

[features]
default = [ ]
base64 = [ "bitcoin/base64" ]
test = [ "base64", "verify" ]
verify = [ "bitcoin/bitcoinconsensus" ]
with-musig-cli = [ "base64", "dep:clap", "secp256k1-zkp/rand-std" ]

[[bin]]
name = "musig-cli"
required-features = [ "with-musig-cli" ]
