[package]
name = "musig-psbt"
version = "0.2.0"
edition = "2018"

[dependencies]
bitcoin = { version = "0.32" }
bitcoin-io = "0.1.3"
clap = { version = "4.2.7", features = [ "derive" ], optional = true }
rand = { version = "0.8" }
secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d", features = [ "actual-rand" ] }

[dev-dependencies]
bitcoin = { version = "0.32", features = [ "base64", "bitcoinconsensus" ] }

[features]
default = [ "verify" ]
base64 = [ "bitcoin/base64" ]
verify = [ "bitcoin/bitcoinconsensus" ]
with-musig-cli = [ "base64", "dep:clap", "secp256k1-zkp/rand-std" ]

[[bin]]
name = "musig-cli"
required-features = [ "with-musig-cli" ]
